--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,11 +1,11 @@
 
 body {
-  background-image: url(../../img/rainbow_way.gif);
+  background-image: url(../../img/glitter.gif);
 	background-attachment: fixed;
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	color: rgb(255,255,255,0.9);
+	color: #ffd1dc;
 	font-size : 1em
 
 }
@@ -26,8 +26,8 @@ p {
 
 
 .text {
-	background-color: black;
-	opacity: 0.7;
+	background-color: rgb(0, 255, 255, 0.3);
+	color: #ffd1dc;
 }
 
 /* TIMER */
@@ -50,7 +50,7 @@ li span {
 }
 /* GLITCH INVITATION */
 #invitation {
-	background-color: black;
+	/* background-color: black; */
 }
 
 .contents {
@@ -59,7 +59,7 @@ li span {
 
 
 .glitch {
-  color: rgb(255, 102, 255);
+  color: #ffd1dc;
   position: relative;
   font-size: 9vw;
   // margin: 70px 200px;
@@ -71,7 +71,7 @@ li span {
   position: absolute;
   left: -2px;
   text-shadow: -5px 0 magenta;
-  background: black;
+  /* background: black; */
   overflow: hidden;
   top: 0;
   animation: noise-1 3s linear infinite alternate-reverse, glitch 5s 5.05s infinite;
@@ -82,7 +82,7 @@ li span {
   position: absolute;
   left: 2px;
   text-shadow: -5px 0 lightgreen;
-  background: black;
+  /* background: black; */
   overflow: hidden;
   top: 0;
   animation: noise-2 3s linear infinite alternate-reverse, glitch 5s 5s infinite;
