--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -44,6 +44,10 @@ li span {
   font-size: 4.5rem;
 }
 
+#vibe {
+	max-width:60%;
+	max-height:60%;
+}
 #timer {
 	align-items: center;
 	text-align: center;
